--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,85 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 1
+      Añadir nuevo artículo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input [(ngModel)]="newItem.name" type="text" clearInput name="name">
+      </ion-input>
+    </ion-item>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-item>
+      <ion-label position="floating">Precio</ion-label>
+      <ion-input [(ngModel)]="newItem.price" type="number" clearInput name="price">
+      </ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Cantidad en existencia</ion-label>
+      <ion-input [(ngModel)]="newItem.quantity" type="number" clearInput name="quantity">
+      </ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label position="floating">Descripción</ion-label>
+      <ion-input [(ngModel)]="newItem.description" type="text" clearInput name="description">
+      </ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Código de barra</ion-label>
+      <ion-input [(ngModel)]="newItem.barcode" type="text" clearInput name="barcode" value="{{ result }}">
+      </ion-input>
+    </ion-item>
+  </ion-list>
+
+  
+  <ion-button (click)="startScanner()" expand="full" shape="round">
+    Escanear código
+  </ion-button>
+  <br>
+  <ion-button expand="full" (click)="addItem()" shape="round" type="submit" color="success">
+    Añadir artículo
+  </ion-button>
+
+  <ion-list #inventory>
+    <ion-list-header>
+      <ion-label>Inventario</ion-label>
+    </ion-list-header>
+
+    <ion-item-sliding *ngFor="let item of items">
+      <ion-item>
+        <ion-label text-wrap>
+          <h3>{{ item.name }}</h3>
+          <ion-text color="secondary">
+            <p>{{ item.description }}</p>
+          </ion-text>
+          <p>{{ item.modified | date:'short' }}</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="secondary" (click)="updateItem(item)">Editar</ion-item-option>
+        <ion-item-option color="danger" (click)="deleteItem(item)">Borrar</ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-row class="scanner-buttons" [hidden]="!scanActive">
+    <ion-col class="ion-no-padding">
+      <ion-button (click)="stopScanner()" expand="block" shape="round">
+        Detener
+      </ion-button>
+    </ion-col>
+  </ion-row>
+
+  <div class="scan-box" [hidden]="!scanActive"></div>
+  
 </ion-content>
