--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,37 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab 3
+      Lista de inventario
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list #inventory>
+    <ion-list-header>
+      <ion-label>Artículos</ion-label>
+    </ion-list-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-item-sliding *ngFor="let item of items">
+      <ion-item>
+        <ion-label text-wrap>
+          <h3>{{ item.name }}</h3>
+          <ion-text color="secondary">
+            <p>{{ item.description }}</p>
+          </ion-text>
+          <p>{{ item.modified | date:'short' }}</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="secondary" (click)="updateItem(item)">Editar</ion-item-option>
+        <ion-item-option color="danger" (click)="deleteItem(item)">Borrar</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-button (click)="loadItems()" color="success" expand="full" shape="round">
+      Actualizar
+    </ion-button>
+    
+  </ion-list>
 </ion-content>
