--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,8 +12,33 @@
       <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
-  
-  <ion-card *ngIf="prueba_bool">
+
+  <!-- List of Text Items -->
+<ion-list>
+  <ion-item>
+    <ion-label>Pokémon Yellow</ion-label>
+    <ion-label slot="end">Label</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>
+      <h3>Fernando</h3>
+      <p>flopezramirez@hotmai.com</p>
+    </ion-label>
+    <ion-label slot="end" class="ion-text-right">2226754831</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>The Legend of Zelda</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Pac-Man</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Super Mario World</ion-label>
+  </ion-item>
+</ion-list>
+
+
+  <!-- <ion-card *ngIf="prueba_bool">
     <ion-card-header>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
       <ion-card-title>Card Title</ion-card-title>
@@ -29,6 +54,6 @@
     <ul *ngFor="let num of pruebas">
       <li>{{ num }}</li>
     </ul>
-  </div>
+  </div> -->
 
 </ion-content>
