--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" [hidden]="scanActive">
   <ion-toolbar color="primary">
     <ion-title>
       Buscar artículo
@@ -6,54 +6,45 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" [hidden]="scanActive" [style.--background]="scanActive ? '#00000000' : '#ffffff'">
+  <h4 style="margin-left:15px">Busca un artículo por su código de barra.</h4><br>
 
-  <!-- List of Text Items -->
-<ion-list>
-  <ion-item>
-    <ion-label>Pokémon Yellow</ion-label>
-    <ion-label slot="end">Label</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>
-      <h3>Fernando</h3>
-      <p>flopezramirez@hotmai.com</p>
-    </ion-label>
-    <ion-label slot="end" class="ion-text-right">2226754831</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>The Legend of Zelda</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Pac-Man</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Super Mario World</ion-label>
-  </ion-item>
-</ion-list>
+  <ion-button (click)="startScanner()" expand="full" shape="round">
+    Escanear código
+  </ion-button><br>
 
-
-  <!-- <ion-card *ngIf="prueba_bool">
+  <ion-card *ngIf="result">
     <ion-card-header>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-      <ion-card-title>Card Title</ion-card-title>
+      <ion-card-subtitle>
+        <ion-text color="secondary">
+          <p><b>ID: {{ result.barcode }}</b></p>
+        </ion-text>
+      </ion-card-subtitle>
+      <ion-card-title>{{ result.name }}</ion-card-title>
+      <ion-card-subtitle>
+        <ion-text color="medium">
+          <p><b>Precio:</b> ${{ result.price }} MXN - <b>Disponible:</b> {{ result.quantity }}</p>
+        </ion-text>
+      </ion-card-subtitle>
     </ion-card-header>
-  
     <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      {{ result.description }}
+      <p>{{ result.modified | date:'medium' }}</p>
     </ion-card-content>
   </ion-card>
 
-  <div *ngIf="pruebas">
-    <ul *ngFor="let num of pruebas">
-      <li>{{ num }}</li>
-    </ul>
-  </div> -->
+  <img src="../assets/slides/search.png" id="search-bg"/>
 
 </ion-content>
+
+
+<ion-row class="scanner-buttons" [hidden]="!scanActive">
+  <ion-col class="ion-no-padding">
+    <ion-button (click)="stopScanner()" expand="block" shape="round">
+      Detener
+    </ion-button>
+  </ion-col>
+</ion-row>
+
+<div class="scan-box" [hidden]="!scanActive"></div>
+
